version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Mechanical/Fields/Adapters/DSBearingAdapter.rst.txt
.. vale off



:class:`DSBearingAdapter`
=========================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Mechanical.Fields.Adapters.DSBearingAdapter

   Bases: :py:obj:`object`


   
   Adapter dedicated to IDSBearingAuto objects.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: DSBearingAdapter

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ChangeFieldDefinitionType`
            - ChangeFieldDefinitionType method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~FieldProvider`
            - Gets the wrapped load object from Mechanical.







Property detail
---------------
.. py:property:: FieldProvider
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSBearingAuto]


   
   Gets the wrapped load object from Mechanical.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: ChangeFieldDefinitionType(componentType: Ansys.Common.Interop.CAERepObjects.AnsBCLVType, newType: Ansys.Common.Interop.AnsMaterial.kEDDataType) -> None

   
   ChangeFieldDefinitionType method.

   ..
       !! processed by numpydoc !!



.. vale on