version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Mechanical/Fields/Adapters/DSBearingAdapter.rst.txt
.. vale off



:class:`DSBearingAdapter`
=========================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Mechanical.Fields.Adapters.DSBearingAdapter

   Bases: :py:obj:`object`


   
   Adapter dedicated to IDSBearingAuto objects.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: DSBearingAdapter

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ChangeFieldDefinitionType`
            - ChangeFieldDefinitionType method.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~FieldProvider`
            - Gets the wrapped load object from Mechanical.







Property detail
---------------
.. py:property:: FieldProvider
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSBearingAuto]


   
   Gets the wrapped load object from Mechanical.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: ChangeFieldDefinitionType(componentType: Ansys.Common.Interop.CAERepObjects.AnsBCLVType, newType: Ansys.Common.Interop.AnsMaterial.kEDDataType) -> None

   
   ChangeFieldDefinitionType method.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on